// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default close button correctly 1`] = `
<IconButton
  aria-label="Some label"
  className="src-shared-components-button-close__close-button-default src-shared-components-button-close__close-button"
  icon={[Function]}
  onClick={[Function]}
  type="default"
/>
`;

exports[`should render a success close button correctly 1`] = `
<IconButton
  aria-label="Some label"
  className="src-shared-components-button-close__close-button-success src-shared-components-button-close__close-button"
  icon={[Function]}
  onClick={[Function]}
  type="inverse"
/>
`;

exports[`should render an error close button correctly 1`] = `
<IconButton
  aria-label="Some label"
  className="src-shared-components-button-close__close-button-error src-shared-components-button-close__close-button"
  icon={[Function]}
  onClick={[Function]}
  type="inverse"
/>
`;
